~ handle revoke access token

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="lbl_list_todo_message">Select To Do List</string>
     <string name="lbl_list_doing_message">Select Doing List</string>
     <string name="lbl_list_done_message">Select Done List</string>
+    <string name="lbl_unauthorized">Unauthorized Access, please grant this app access to your trello account!</string>
 
     <string name="timeleft_less_than_minute"><![CDATA[< 1 min]]></string>
     <plurals name="timeleft_minutes">
@@ -26,6 +27,9 @@
     <string name="txt_total_time">Total Time: %s</string>
     <string name="txt_total_pomos">Pomodoros: %d</string>
     <string name="txt_plases_select">Please Select</string>
+
+    <string name="txt_ok">OK</string>
+    <string name="txt_cancel">Cancel</string>
 
     <!-- App Icons -->
     <string name="icon_coffee">&#xe800;</string>
